worked on animations for moistureview

--- a/android/app/src/main/res/values/attrs_moisture_view.xml
+++ b/android/app/src/main/res/values/attrs_moisture_view.xml
@@ -4,6 +4,7 @@
         <attr name="outsideLimitColor" format="color" />
         <attr name="shadowColor" format="color" />
         <attr name="ringColor" format="color" />
+        <attr name="arrowColor" format="color" />
         <attr name="fromDegree" format="integer" />
         <attr name="toDegree" format="integer" />
         <attr name="gaugePenSize" format="integer" />
