--- a/android/app/src/main/res/layout/activity_select_device.xml
+++ b/android/app/src/main/res/layout/activity_select_device.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:visibility="visible"
-android:animateLayoutChanges="true"
-tools:context="se.viltefjall.tekk.ermina.SelectDevice.SelectDeviceActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="visible"
+    android:animateLayoutChanges="true"
+    android:background="@color/colorPrimary"
+    tools:context="se.viltefjall.tekk.ermina.SelectDevice.SelectDeviceActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/RecyclerView"
