--- a/android/app/src/main/res/layout/activity_view_status.xml
+++ b/android/app/src/main/res/layout/activity_view_status.xml
@@ -2,67 +2,136 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/connectDeviceLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     tools:context="se.viltefjall.tekk.ermina.ViewStatus.ViewStatusActivity">
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_above="@+id/connectDeviceLayout"
+        android:layout_centerHorizontal="true"
+        android:alpha="100"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/connect_progress"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:weightSum="8"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <se.viltefjall.tekk.ermina.common.MoistureView
-            android:id="@+id/moistureViewTop"
+        <LinearLayout
+            android:id="@+id/statusLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_weight="4"
+            android:elevation="0dp"
+            android:orientation="vertical"
             android:visibility="visible"
-            app:gaugePenSize="60"
-            app:ringPenSize="30"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:outsideLimitColor="#d1d1d1"
-            app:shadowColor="#696969"
-            app:fromDegree="140"
-            app:toDegree="400" />
+            app:layout_constraintVertical_bias="0.0">
 
-        <se.viltefjall.tekk.ermina.common.MoistureView
-            android:id="@+id/moistureViewBtm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="4"
-            app:gaugePenSize="60"
-            app:ringPenSize="30"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:outsideLimitColor="#d1d1d1"
-            app:limitColor="#1cb2e4"
-            app:shadowColor="#696969"
-            app:fromDegree="140"
-            app:toDegree="400" />
+            <se.viltefjall.tekk.ermina.common.MoistureView
+                android:id="@+id/moistureViewTop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:alpha="0"
+                android:visibility="visible"
+                app:fromDegree="140"
+                app:gaugePenSize="60"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:outsideLimitColor="#d1d1d1"
+                app:ringPenSize="30"
+                app:ringColor="@color/moistureRingColor"
+                app:arrowColor="@color/moistureArrowColor"
+                app:shadowColor="#696969"
+                app:toDegree="400" />
+
+            <se.viltefjall.tekk.ermina.common.MoistureView
+                android:id="@+id/moistureViewBtm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:elevation="5dp"
+                android:alpha="0"
+                android:visibility="visible"
+                app:fromDegree="140"
+                app:gaugePenSize="60"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:limitColor="#1cb2e4"
+                app:outsideLimitColor="#d1d1d1"
+                app:ringPenSize="30"
+                app:shadowColor="#696969"
+                app:toDegree="400" />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clipToPadding="false"
+            android:padding="8dp"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/reload"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/round_hover_btn"
+                android:clickable="true"
+                android:onClick="tmp"
+                android:elevation="5dp" />
+
+            <ImageView
+                android:id="@+id/settings"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:clickable="true"
+                android:onClick="tmp2"
+                android:layout_below="@+id/reload"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/round_hover_btn"
+                android:elevation="5dp" />
+        </RelativeLayout>
 
     </LinearLayout>
 
