--- a/android/app/src/main/res/layout/card_select_device.xml
+++ b/android/app/src/main/res/layout/card_select_device.xml
@@ -17,7 +17,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:adjustViewBounds="false"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorPrimaryDark"
                 android:cropToPadding="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
