--- a/android/app/src/main/res/layout/activity_view_status.xml
+++ b/android/app/src/main/res/layout/activity_view_status.xml
@@ -49,7 +49,7 @@
             app:layout_constraintVertical_bias="0.0">
 
             <se.viltefjall.tekk.ermina.common.MoistureView
-                android:id="@+id/moistureViewTop"
+                android:id="@+id/moistureView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -61,22 +61,21 @@
                 android:layout_weight="1"
                 android:alpha="0"
                 android:visibility="visible"
-                app:fromDegree="140"
-                app:gaugePenSize="60"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:outsideLimitColor="#d1d1d1"
+                app:gaugePenSize="60"
+                app:backgroundColor="#d1d1d1"
                 app:ringPenSize="30"
                 app:ringColor="@color/moistureRingColor"
                 app:arrowColor="@color/moistureArrowColor"
-                app:shadowColor="#696969"
-                app:toDegree="400" />
+                app:toDegree="400"
+                app:fromDegree="140" />
 
-            <se.viltefjall.tekk.ermina.common.MoistureView
-                android:id="@+id/moistureViewBtm"
+            <se.viltefjall.tekk.ermina.common.WaterView
+                android:id="@+id/waterView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -96,10 +95,9 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:limitColor="#1cb2e4"
-                app:outsideLimitColor="#d1d1d1"
+                app:foregroundColor="#1cb2e4"
+                app:backgroundColor="#d1d1d1"
                 app:ringPenSize="30"
-                app:shadowColor="#696969"
                 app:toDegree="400" />
 
         </LinearLayout>
@@ -126,7 +124,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:clickable="true"
-                android:onClick="tmp2"
+                android:onClick="tmp"
                 android:layout_below="@+id/reload"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/round_hover_btn"
