--- a/android/app/src/main/res/values/attrs.xml
+++ b/android/app/src/main/res/values/attrs.xml
@@ -3,13 +3,17 @@
     <declare-styleable name="StatusView">
         <attr name="foregroundColor" format="color" />
         <attr name="backgroundColor" format="color" />
-        <attr name="ringColor" format="color" />
-        <attr name="fromDegree" format="integer" />
-        <attr name="toDegree" format="integer" />
-        <attr name="gaugePenSize" format="integer" />
-        <attr name="ringPenSize" format="integer" />
-        <attr name="capStyle" format="enum">
-            <enum name="BUTT" value="0" />
+        <attr name="textColor"       format="color" />
+        <attr name="ringColor"       format="color" />
+        <attr name="iconColor"       format="color" />
+        <attr name="fromDegree"      format="integer" />
+        <attr name="toDegree"        format="integer" />
+        <attr name="gaugePenSize"    format="integer" />
+        <attr name="ringPenSize"     format="integer" />
+        <attr name="textPenSize"     format="integer" />
+        <attr name="textSize"        format="integer" />
+        <attr name="capStyle"        format="enum">
+            <enum name="BUTT"  value="0" />
             <enum name="ROUND" value="1" />
         </attr>
     </declare-styleable>
@@ -17,23 +21,31 @@
     <declare-styleable name="MoistureView">
         <attr name="foregroundColor" />
         <attr name="backgroundColor" />
-        <attr name="ringColor" />
-        <attr name="fromDegree" />
-        <attr name="toDegree" />
-        <attr name="gaugePenSize" />
-        <attr name="ringPenSize" />
-        <attr name="capStyle" />
+        <attr name="textColor"       />
+        <attr name="ringColor"       />
+        <attr name="iconColor"       />
+        <attr name="fromDegree"      />
+        <attr name="toDegree"        />
+        <attr name="gaugePenSize"    />
+        <attr name="ringPenSize"     />
+        <attr name="textPenSize"     />
+        <attr name="textSize"        />
+        <attr name="capStyle"        />
         <attr name="arrowColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="WaterView" parent="StatusView">
         <attr name="foregroundColor" />
         <attr name="backgroundColor" />
-        <attr name="ringColor" />
-        <attr name="fromDegree" />
-        <attr name="toDegree" />
-        <attr name="gaugePenSize" />
-        <attr name="ringPenSize" />
-        <attr name="capStyle" />
+        <attr name="textColor"       />
+        <attr name="ringColor"       />
+        <attr name="iconColor"       />
+        <attr name="fromDegree"      />
+        <attr name="toDegree"        />
+        <attr name="gaugePenSize"    />
+        <attr name="ringPenSize"     />
+        <attr name="textPenSize"     />
+        <attr name="textSize"        />
+        <attr name="capStyle"        />
     </declare-styleable>
 </resources>
