--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#d75f0f</color>
     <color name="btLogoBackground">#43cc61</color>
     <color name="connectProgressStart">#43cc61</color>
-    <color name="moistureRingColor">#0bb4da</color>
+    <color name="statusRingColor">#a5ff56</color>
+    <color name="waterLevelColor">#79e6ff</color>
+    <color name="moistureLevelColor">#79e6ff</color>
     <color name="moistureArrowColor">#c8ff2882</color>
 </resources>
