--- a/android/app/src/main/res/layout/activity_view_status.xml
+++ b/android/app/src/main/res/layout/activity_view_status.xml
@@ -119,6 +119,8 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:background="@drawable/round_hover_btn"
+                android:src="@mipmap/reload"
+                android:padding="16dp"
                 android:alpha="0"
                 android:clickable="false"
                 android:onClick="reload"
@@ -130,9 +132,12 @@
                 android:layout_height="70dp"
                 android:alpha="0"
                 android:clickable="false"
+                android:onClick="settings"
                 android:layout_below="@+id/reload"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/round_hover_btn"
+                android:src="@mipmap/settings"
+                android:padding="16dp"
                 android:elevation="5dp" />
         </RelativeLayout>
 
