moved plants.xml to its own package and a lot of work done on SelectPlantActivity

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -10,4 +10,7 @@
         <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
     </style>
 
+    <style name="customButton">
+
+    </style>
 </resources>
