added file for dummy plant generation and some ui tweaks

--- a/android/app/src/main/res/layout/activity_select_plant.xml
+++ b/android/app/src/main/res/layout/activity_select_plant.xml
@@ -26,14 +26,28 @@
 
     <Button
         android:id="@+id/custom"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/custom_button_shape"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
         android:text="@string/buttonCustom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/round_hover_btn"
+        android:src="@mipmap/reload"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
