some more tweaks..

--- a/android/app/src/main/res/layout/activity_select_plant.xml
+++ b/android/app/src/main/res/layout/activity_select_plant.xml
@@ -31,9 +31,10 @@
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/custom_button_shape"
+        android:background="@drawable/custom_button"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
+        android:clickable="true"
         android:text="@string/buttonCustom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,7 @@
         android:layout_height="70dp"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
+        android:clickable="true"
         android:background="@drawable/round_hover_btn"
         android:src="@mipmap/reload"
         android:padding="16dp"
