ui for custom plant is working. the ok button is not functional yet

--- a/android/app/src/main/res/values/attrs.xml
+++ b/android/app/src/main/res/values/attrs.xml
@@ -31,7 +31,9 @@
         <attr name="textPenSize"     />
         <attr name="textSize"        />
         <attr name="capStyle"        />
-        <attr name="arrowColor" format="color" />
+        <attr name="arrowColor"  format="color"   />
+        <attr name="handleColor" format="color"   />
+        <attr name="cfgMode"     format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="WaterView" parent="StatusView">
