--- a/android/app/src/main/res/layout/activity_select_plant.xml
+++ b/android/app/src/main/res/layout/activity_select_plant.xml
@@ -8,8 +8,25 @@
     android:visibility="visible"
     tools:context="se.viltefjall.tekk.ermina.SelectDevice.SelectDeviceActivity">
 
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_above="@+id/connectDeviceLayout"
+        android:layout_centerHorizontal="true"
+        android:alpha="100"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/connect_progress"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/RecyclerView"
+        android:id="@+id/plants"
+        android:alpha="0"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -21,11 +38,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/custom">
-
     </android.support.v7.widget.RecyclerView>
 
     <Button
         android:id="@+id/custom"
+        android:alpha="100"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginEnd="32dp"
@@ -35,21 +52,25 @@
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
         android:clickable="true"
+        android:onClick="custom"
         android:text="@string/buttonCustom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/reload"
+        android:alpha="0"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
-        android:clickable="true"
         android:background="@drawable/round_hover_btn"
-        android:src="@mipmap/reload"
+        android:clickable="true"
+        android:onClick="reload"
         android:padding="16dp"
+        android:elevation="5dp"
+        android:src="@mipmap/reload"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
