--- a/android/app/src/main/res/layout/activity_select_plant.xml
+++ b/android/app/src/main/res/layout/activity_select_plant.xml
@@ -42,7 +42,7 @@
 
     <Button
         android:id="@+id/custom"
-        android:alpha="100"
+        android:elevation="5dp"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginEnd="32dp"
