--- a/android/app/src/main/res/layout/activity_view_status.xml
+++ b/android/app/src/main/res/layout/activity_view_status.xml
@@ -8,22 +8,6 @@
     android:animateLayoutChanges="true"
     tools:context="se.viltefjall.tekk.ermina.ViewStatus.ViewStatusActivity">
 
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_above="@+id/connectDeviceLayout"
-        android:layout_centerHorizontal="true"
-        android:alpha="100"
-        android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/connect_progress"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -59,7 +43,6 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
-                android:alpha="0"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -87,7 +70,6 @@
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:elevation="5dp"
-                android:alpha="0"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -121,7 +103,6 @@
                 android:background="@drawable/round_hover_btn"
                 android:src="@mipmap/reload"
                 android:padding="16dp"
-                android:alpha="0"
                 android:clickable="false"
                 android:onClick="reload"
                 android:elevation="5dp" />
@@ -130,8 +111,7 @@
                 android:id="@+id/settings"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:alpha="0"
-                android:clickable="false"
+                android:clickable="true"
                 android:onClick="settings"
                 android:layout_below="@+id/reload"
                 android:layout_marginTop="32dp"
